Update from Fidus Writer

--- a/epub/EPUB/document-17.xhtml
+++ b/epub/EPUB/document-17.xhtml
@@ -1,1 +1,114 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex – Websites</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex – Websites">
+    <div class="article-part article-title" id="_17_0">CRI11Annex – Websites</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <h3 id="H8354250">Websites</h3>
+      <p><strong>General principles for risk assessment and recommendations for major events (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Risiko_Grossveranstaltungen.pdf?__blob=publicationFile">https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Risiko_</a> <a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Risiko_Grossveranstaltungen.pdf?__blob=publicationFile">Grossveranstaltungen.pdf</a></p>
+      <p><strong>Analytical Task Force (ATF), BBK</strong></p>
+      <p><a href="https://www.bbk.bund.de/DE/AufgabenundAusstattung/CBRNSchutz/ATF/ATF_node.html">https://www.bbk.bund.de/DE/AufgabenundAusstattung/CBRNSchutz/ATF/</a> <a href="https://www.bbk.bund.de/DE/AufgabenundAusstattung/CBRNSchutz/ATF/ATF_node.html">ATF_node.html</a></p>
+      <p><strong>Selected key terms in population protection (German only), BBK</strong></p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf">/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf</a></p>
+      <p><strong>Committee on Biological Agents (ABAS), BAuA</strong></p>
+      <p><a href="https://www.baua.de/EN/Tasks/Committee-administration/ABAS/ABAS_node.html">https://www.baua.de/EN/Tasks/Committee-administration/ABAS/ABAS_node.html</a></p>
+      <p><strong>Decision No. 1082/2013/EU of the European Parliament and of the Council of 22 October 2013 on serious cross-border threats</strong> <strong>to health, EU </strong></p>
+      <p><a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32013D1082" title="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32013D1082">https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex%3A32013D1082</a></p>
+      <p><strong>Biological Agents Ordinance (BioStoffV) </strong></p>
+      <p><a href="http://www.gesetze-im-internet.de/englisch_biostoffv/englisch_biostoffv.pdf" title="http://www.gesetze-im-internet.de/englisch_biostoffv/englisch_biostoffv.pdf">http://www.gesetze-im-internet.de/englisch_biostoffv/englisch_biostoffv.pdf</a></p>
+      <p><strong>Supplements to the national pandemic preparedness plan – COVID 19 – new coronavirus disease (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Ergaenzung_Pandemieplan_Covid.html">https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Ergaenz</a> <a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Ergaenzung_Pandemieplan_Covid.html">ung_Pandemieplan_Covid.html</a></p>
+      <p><strong>Suspected cases of Ebola (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/E/Ebola/Rahmenkonzept_Ebola.pdf">https://www.rki.de/DE/Content/InfAZ/E/Ebola/Rahmenkonzept_Ebola.pdf</a></p>
+      <p><strong>Biological agents in health care and welfare facilities (TRBA 250), BAuA</strong></p>
+      <p><a href="https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-250.html">https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-250.html</a> </p>
+      <p><strong>Recommendations on sampling for hazard prevention in population protection (German only), BKK.</strong></p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/PublikationenForschung/Fib_Band5_2teAuflage.pdf?__blob=publicationFile">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/PublikationenForschung/Fib_Band5_2teAuflage.pdf?__blob=publicationFile">/PublikationenForschung/Fib_Band5_2teAuflage.pdf</a></p>
+      <p><strong>Recommendation on staff and organisational requirements for the prevention of nosocomial infections (German only), RKI</strong> </p>
+      <p><a href="https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Kommission/Downloads/Rili_Hygmanagement.pdf">https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Kommission/</a> <a href="https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Kommission/Downloads/Rili_Hygmanagement.pdf">Downloads/Rili_Hygmanagement.pdf</a></p>
+      <p><strong>Estimated Personal Protective Equipment (PPE) Needed for Healthcare Facilities, CDC </strong></p>
+      <p><a href="https://www.cdc.gov/vhf/ebola/healthcare-us/ppe/calculator.html" title="https://www.cdc.gov/vhf/ebola/healthcare-us/ppe/calculator.html">https://www.cdc.gov/vhf/ebola/healthcare-us/ppe/calculator.html</a></p>
+      <p><strong>European Agreement concerning the International Carriage of Dangerous Goods by Road ( (Accord européen relatif au transport international des marchandises Dangereuses par Route, ADR), UNECE</strong></p>
+      <p><a href="https://www.unece.org/trans/danger/publi/adr/adr2019/19contentse.html">https://www.unece.org/trans/danger/publi/adr/adr2019/19contentse.html</a></p>
+      <p><strong>Specialist terms in infection control and epidemiology (German only), RKI</strong> </p>
+      <p><a href="https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch_Infektionsschutz.pdf?__blob=publicationFile">https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch_</a> <a href="https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch_Infektionsschutz.pdf?__blob=publicationFile">Infektionsschutz.pdf</a></p>
+      <p><strong>Official fire service regulation 'Units deployed on CBRN operations' (FwDV 500) (German only),</strong> <strong>BBK </strong><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV%20500-2012,1.pdf;jsessionid=3BA3A43E8BA30225A703411AEEE48E8A.1_cid320?__blob=publicationFile">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/Download</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV%20500-2012,1.pdf;jsessionid=3BA3A43E8BA30225A703411AEEE48E8A.1_cid320?__blob=publicationFile">sRechtundVorschriften/Volltext_Fw_Dv/FwDV%20500-2012,1.pdf</a></p>
+      <p><strong>German fire service regulation 'Leadership and command in emergency operations' (FwDV 100), BKK</strong></p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV-100%20englisch.pdf?__blob=publicationFile">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV-100%20englisch.pdf</a></p>
+      <p><strong>Ordinance on the transport of dangerous goods by road, rail and inland waterways <a href="https://www.bmvi.de/SharedDocs/DE/Anlage/G/Gefahrengut/ggvseb-2019-engl.pdf?__blob=publicationFile">(GGVSEB) </a></strong><a href="https://www.bmvi.de/SharedDocs/DE/Anlage/G/Gefahrengut/ggvseb-2019-engl.pdf?__blob=publicationFile">https://www.bmvi.de/SharedDocs/DE/Anlage/G/Gefahrengut/ggvseb-2019-engl.pdf?__blob=publicationFile</a></p>
+      <p><strong>Protecting Health – Assessing Risks, RKI </strong></p>
+      <p><a href="https://edoc.rki.de/handle/176904/5453">https://edoc.rki.de/handle/176904/5453</a></p>
+      <p><strong>Guidance on regulations for the Transport of Infectious Substances, WHO</strong></p>
+      <p><a href="https://www.who.int/csr/resources/publications/biosafety/WHO_HSE_EPR_2008_10.pdf?ua=1">https://www.who.int/csr/resources/publications/biosafety/WHO_HSE_EP</a> <a href="https://www.who.int/csr/resources/publications/biosafety/WHO_HSE_EPR_2008_10.pdf?ua=1">R_2008_10.pdf</a></p>
+      <p><strong>Notes of the outpatient management of suspected COVID-19 cases (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/ambulant.html">https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/ambula</a> <a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/ambulant.html">nt.html</a></p>
+      <p><strong>Forming teams – the administrative-organisational component (German only), BKK</strong></p>
+      <p><a href="http://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/IMKBeschluesse/IMK174TOP26Anlg2.pdf">http://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/Downloads</a> <a href="http://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/IMKBeschluesse/IMK174TOP26Anlg2.pdf">RechtundVorschriften/IMKBeschluesse/IMK174TOP26Anlg2.pdf</a></p>
+      <p><strong>Advice on using respirators (German only), DGUV</strong></p>
+      <p><a href="https://publikationen.dguv.de/regelwerk/regeln/1011/benutzung-von-atemschutzgeraeten">https://publikationen.dguv.de/regelwerk/regeln/1011/benutzung-von-atemschutzgeraeten</a></p>
+      <p><strong>Infection risks in the emergency services (German only), LIA</strong> </p>
+      <p><a href="https://www.lia.nrw.de/themengebiete/Arbeitsschutz-und-Gesundheit/Biostoffe/Infektionsgefaehrdung-im-Rettungsdienst/index.html">https://www.lia.nrw.de/themengebiete/Arbeitsschutz-und-Gesundheit/Biostoffe/Infektionsgefaehrdung-im-Rettungsdienst/index.html</a> </p>
+      <p><strong>Communicable diseases A-Z (German only), RKI </strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/InfAZ_marginal_node.html">https://www.rki.de/DE/Content/InfAZ/InfAZ_marginal_node.html</a></p>
+      <p><strong>International Health Regulations (German only), RKI </strong></p>
+      <p><a href="https://www.rki.de/DE/Content/Infekt/IGV/Gesetz_IGV_de-en.pdf">https://www.rki.de/DE/Content/Infekt/IGV/Gesetz_IGV_de-en.pdf</a></p>
+      <p><strong>Infectious Substances, Class 6.2 Cat. A, ADR</strong> </p>
+      <p><a href="https://adrbook.com/en/2017/ADR/2.2.62">https://adrbook.com/en/2017/ADR/2.2.62</a> </p>
+      <p><strong>Influenza pandemic preparedness plan (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/I/Influenza/Pandemieplanung/Pandemieplanung_Node.html">https://www.rki.de/DE/Content/InfAZ/I/Influenza/Pandemieplanung/Pandemieplanung_Node.html</a></p>
+      <p><strong>Commission for Hospital Hygiene and Infection Prevention, RKI.</strong></p>
+      <p><a href="https://www.rki.de/EN/Content/Institute/Committees/KRINKO/KRINKO_node_en.html">https://www.rki.de/EN/Content/Institute/Committees/KRINKO/KRINKO_node_en.html</a></p>
+      <p><strong>Guideline on Biological Incident Response &amp; Environmental Sampling, EU</strong></p>
+      <p><a href="https://ec.europa.eu/health/ph_threats/com/preparedness/docs/biological.pdf">https://ec.europa.eu/health/ph_threats/com/preparedness/docs/biological.pdf</a></p>
+      <p><strong>Guidelines on crisis communication (German only), BMI</strong></p>
+      <p><a href="https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/themen/bevoelkerungsschutz/leitfaden-krisenkommunikation.pdf">https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/the</a> <a href="https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/themen/bevoelkerungsschutz/leitfaden-krisenkommunikation.pdf">men/bevoelkerungsschutz/leitfaden-krisenkommunikation.pdf</a></p>
+      <p><strong>List of tested and recognised disinfection agents and methods (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Desinfektionsmittel/Desinfektionsmittellist/Desinfektionsmittelliste_node.html">https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Desinfektion</a> <a href="https://www.rki.de/DE/Content/Infekt/Krankenhaushygiene/Desinfektionsmittel/Desinfektionsmittellist/Desinfektionsmittelliste_node.html">smittel/Desinfektionsmittellist/Desinfektionsmittelliste_node.html</a></p>
+      <p><strong>Matrix of the extent of damage and likelihood of occurrence (German only), BBK</strong></p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Downloads/Krisenmanagement/matrix_abb.html">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Downloads/Kr</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Downloads/Krisenmanagement/matrix_abb.html">isenmanagement/matrix_abb.html</a></p>
+      <p><strong>Multilateral agreement M315 (German only), RKI </strong></p>
+      <p><a href="https://www.rki.de/DE/Content/InfAZ/E/Ebola/Muster_Verpackungsanleitung.pdf?__blob=publicationFile">https://www.rki.de/DE/Content/InfAZ/E/Ebola/Muster_Verpackungsanleit</a> <a href="https://www.rki.de/DE/Content/InfAZ/E/Ebola/Muster_Verpackungsanleitung.pdf?__blob=publicationFile">ung.pdf</a> </p>
+      <p><strong>How to proceed when powder is discovered (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/Infekt/Biosicherheit/Poststellen/Pulverfund.pdf">https://www.rki.de/DE/Content/Infekt/Biosicherheit/Poststellen/Pulverfund.pdf</a></p>
+      <p><strong>Advice on emergency preparedness and what to do in an emergency (German only), BBK</strong></p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Broschueren_Flyer/Buergerinformationen_A4/Ratgeber_Brosch.pdf">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Broschueren_Flyer/Buergerinformationen_A4/Ratgeber_Brosch.pdf">/Broschueren_Flyer/Buergerinformationen_A4/Ratgeber_Brosch.pdf</a></p>
+      <p><strong>Council Directive 89/686/EEC of 21 December 1989 on the approximation of the laws of the Member States relating to personal protective equipment </strong></p>
+      <p><a href="https://eur-lex.europa.eu/legal-content/en/TXT/?uri=CELEX%3A31989L0686" title="https://eur-lex.europa.eu/legal-content/en/TXT/?uri=CELEX%3A31989L0686">https://eur-lex.europa.eu/legal-content/en/TXT/?uri=CELEX%3A31989L0686</a></p>
+      <p><strong>Risk assessment in population protection (German only)</strong> </p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungsschutz.pdf">https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungsschutz.pdf">/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungssc</a> <a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/PiB_16_Risikoanalyse_im_Bevoelkerungsschutz.pdf">hutz.pdf</a></p>
+      <p><strong>Risk management in medical practices (German only), RKI</strong></p>
+      <p><a href="https://www.bundesaerztekammer.de/fileadmin/user_upload/downloads/Risikomanagement_in_Arztpraxen.pdf">https://www.bundesaerztekammer.de/fileadmin/user_upload/downloads</a> <a href="https://www.bundesaerztekammer.de/fileadmin/user_upload/downloads/Risikomanagement_in_Arztpraxen.pdf">/Risikomanagement_in_Arztpraxen.pdf</a></p>
+      <p><strong>Competence and Treatment Centres for high consequence infectious diseases (STAKOB), RKI</strong></p>
+      <p><a href="https://www.rki.de/EN/Content/infections/biological/Stakob/Stakob_node.html;jsessionid=84B693643259B280D605DEF7D2767A29.internet051">https://www.rki.de/EN/Content/infections/biological/Stakob/Stakob_node.html;jsessionid=84B693643259B280D605DEF7D2767A29.internet051</a></p>
+      <p><strong>Structures and measures, national pandemic preparedness plan part 1 (German only), RKI </strong></p>
+      <p><a href="https://edoc.rki.de/handle/176904/187">https://edoc.rki.de/handle/176904/187</a></p>
+      <p><strong>Technical Rules for Biological Agents (TRBA), BAuA</strong></p>
+      <p><a href="https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA.html">https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-250.html</a></p>
+      <p><strong>TRBA 130, BAuA </strong></p>
+      <p><a href="https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-130.html" title="https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-130.html">https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/TRBA-130.html<br /></a></p>
+      <h4 id="H8778968"><em><strong>Crisis management</strong></em></h4>
+      <p><strong>Notification of biological events (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/Infekt/IfSG/Meldeboegen/Meldung_12/meldung_12_node.html">https://www.rki.de/DE/Content/Infekt/IfSG/Meldeboegen/Meldung_12/me</a> <a href="https://www.rki.de/DE/Content/Infekt/IfSG/Meldeboegen/Meldung_12/meldung_12_node.html">ldung_12_node.html</a></p>
+      <p><strong>Notification of hazards in the chemical sector (German only), BBK</strong> </p>
+      <p><a href="https://www.bbk.bund.de/SharedDocs/Kurzmeldungen/BBK/DE/2017/IGV_Meldebogen_Info_WHO_Chemie.html">https://www.bbk.bund.de/SharedDocs/Kurzmeldungen/BBK/DE/2017/IGV</a> <a href="https://www.bbk.bund.de/SharedDocs/Kurzmeldungen/BBK/DE/2017/IGV_Meldebogen_Info_WHO_Chemie.html">_Meldebogen_Info_WHO_Chemie.html</a> </p>
+      <p><strong>Care of patients infected with highly pathogenic organisms outside of special isolation units (Resolution 610), BAuA</strong></p>
+      <p><a href="https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/Resolution-610.html">https://www.baua.de/EN/Service/Legislative-texts-and-technical-rules/Rules/TRBA/Resolution-610.html</a></p>
+      <p><strong>Guidelines on the disposal of waste from health service<a href="https://www.laga-online.de/documents/m_2_3_1517834373.pdf"> facilities (German only), LAGA</a></strong></p>
+      <p><a href="https://www.laga-online.de/documents/m_2_3_1517834373.pdf">https://www.laga-online.de/documents/m_2_3_1517834373.pdf</a></p>
+      <p><strong>Warning App NINA (German only), BBK</strong></p>
+      <p><a href="https://www.bbk.bund.de/DE/NINA/Warn-App_NINA.html" title="https://www.bbk.bund.de/DE/NINA/Warn-App_NINA.html">https://www.bbk.bund.de/DE/NINA/Warn-App_NINA.html</a></p>
+      <p><strong>Objectives of infection control measures (German only), RKI</strong></p>
+      <p><a href="https://www.rki.de/DE/Content/Infekt/EpidBull/Archiv/2020/Ausgaben/07_20.pdf">https://www.rki.de/DE/Content/Infekt/EpidBull/Archiv/2020/Ausgaben/07</a> <a href="https://www.rki.de/DE/Content/Infekt/EpidBull/Archiv/2020/Ausgaben/07_20.pdf">_20.pdf</a> </p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
