Update from Fidus Writer

--- a/html/document-4.html
+++ b/html/document-4.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
-  <body>
+  <body class="book-chapter">
     <div class="article-part article-title" id="_4_0">CRI003: Working in teams</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
@@ -42,11 +42,10 @@
       <h2 id="H153399">Official regulation DV 100 'Leadership and command in emergency operations'</h2>
       <p>In Germany, all disaster risk management organisations (fire service, emergency services, police/regulatory authorities and relief organisations) also operate in team mode in emergency operations, each according to the same type of official regulation (e.g. the <strong><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV%20100.pdf" title="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/FIS/DownloadsRechtundVorschriften/Volltext_Fw_Dv/FwDV%20100.pdf">fire service regulation 'Leadership and command in emergency operations</a>'</strong> (FwDV 100). To enable the health authorities to find their way round this structure it is important to integrate it into the emergency and disaster response system early on.</p>
       <p>In Germany, at the level of cities and administrative districts the respective official regulation is <em>the</em> management instrument for all emergency and disaster response agencies. The official regulation integrates all representatives of the key areas of emergency and disaster response and health care into a single management framework with equal responsibility.</p>
-      <p>A management or disaster risk management team takes care of all the operational-tactical measures that arise, e.g. formation of sections, provision of personnel and reserves, or the establishment and operation of a communication structure.<br></p>
+      <p>A management or disaster risk management team takes care of all the operational-tactical measures that arise, e.g. formation of sections, provision of personnel and reserves, or the establishment and operation of a communication structure.</p>
       <figure id="F75946271" class="aligned-center image-width-100" data-aligned="center" data-width="100" data-category="figure"><img src="images/90bfad67-6e8a-4cc6-b7c8-76ac64997bf0.png">
         <figcaption><span class="label">Figure</span><span class="text"><em><strong> </strong></em>Structure of a management team</span></figcaption>
       </figure>
-      <p><em><strong>Figure 4: Structure of a management team</strong></em></p>
       <p>In general, the following staff functions (S) should be established in both teams:</p>
       <ul id="L13963111">
         <li>
@@ -77,7 +76,6 @@
       <figure id="F10464411" class="aligned-center image-width-100" data-aligned="center" data-width="100" data-category="figure"><img src="images/80d2b269-76f8-43ca-83a3-e341c4f08917.png">
         <figcaption><span class="label">Figure</span><span class="text">Structure of an administrative team</span></figcaption>
       </figure>
-      <p><em><strong>Figure 5: Structure of an administrative team</strong></em></p>
       <p>The 'team leader' is responsible for leading and coordinating the administrative team. This individual takes decisions on measures to be introduced, defines objectives, and decides on the appointment of further situation-specific members. If political responsibility does not rest with the administrative team leader, the team leader decides which measures will be determined within the team and which ones by the body with overall political responsibility.</p>
       <p>The <strong>administrative team coordination group (ATCG)</strong> comprises the sections <strong>internal services</strong> and <strong>situation and documentation</strong>. The <strong>internal services</strong> section alerts team members and when necessary updates the team's official regulations, as well as the alert and contact data lists. It also ensures that the team is operational, i.e. availability of resources, reordering of materials, organisation of rooms and meetings. The ATCG section <strong>situation and documentation</strong> is responsible for requesting, collating, evaluating and documenting information and reports on the situation and reports. It also keeps the mission diary, and is responsible for describing the situation and forecasting future development.</p>
       <p>The <strong>public information and media work (PIMW)</strong> function coordinates, supports and informs the press and other media, e.g. by preparing press briefings, evaluating press releases or setting up a public hotline.</p>
@@ -88,7 +86,6 @@
       <figure id="F84973601" class="aligned-center image-width-100" data-aligned="center" data-width="100" data-category="figure"><img src="images/79e588fd-6cf6-494d-ab3b-92e25bbd1c8b.png">
         <figcaption><span class="label">Figure</span><span class="text">The teams</span></figcaption>
       </figure>
-      <p><em><strong>Figure 6: The teams</strong></em></p>
       <h2 id="H2640525">The crisis team in the public health office</h2>
       <p>In the event of a crisis, the public health office's work/crisis team is basically a supplementary organisational structure within the office which is there to support the director, who will usually represent the public health office on the management or disaster risk management team.</p>
       <p>The public health office team itself usually does not perform a management role. Instead it coordinates and designs the measures as instructed by the director of the public health office. In case of limited biological emergencies, however, it can and should also act autonomously. When more major hazards arise, on the other hand, it is a supportive element that reports to the director on the management/disaster risk management team.</p>
@@ -104,7 +101,7 @@
       <figure id="F77300271" class="aligned-center image-width-100" data-aligned="center" data-width="100" data-category="figure"><img src="images/9383dba6-bfb1-4174-9c5d-226b568d1898.png">
         <figcaption><span class="label">Figure</span><span class="text">How the crisis team works</span></figcaption>
       </figure>
-      <p><em><strong>Figure 7: How the crisis team works</strong></em></p>
+      <p><em><strong> </strong></em></p>
       <h2 id="H1128570">Functions and tasks in the crisis team</h2>
       <p>The staff functions and tasks in the crisis team are shown in the following table. They are based on the example of fire service regulation FwDV 100:</p>
       <table id="T40710041" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
