Update from Fidus Writer

--- a/html/document-10.html
+++ b/html/document-10.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CRI11Annex-Checklist for public health offices in crisis mode</title>
+    <title>CRI11Annex - Checklist for public health offices in crisis mode</title>
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
-  <body>
-    <div class="article-part article-title" id="_10_0">CRI11Annex-Checklist for public health offices in crisis mode</div>
+  <body class="book-chapter">
+    <div class="article-part article-title" id="_10_0">CRI11Annex - Checklist for public health offices in crisis mode</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
     <div class="article-part article-richtext article-abstract" data-hidden="true"></div>
