Update from Fidus Writer

--- a/html/document-9.html
+++ b/html/document-9.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
-  <body>
+  <body class="book-chapter">
     <div class="article-part article-title" id="_9_0">CRI11Annex - Abbreviations</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
