--- a/html/document-12.html
+++ b/html/document-12.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
-  <body>
+  <body class="book-chapter">
     <div class="article-part article-title" id="_12_0">CRI11Annex – Checklist as a planning guide for public health offices</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
